--- a/src/Room.css
+++ b/src/Room.css
@@ -1,4 +1,23 @@
 .Room {
+  display: grid;
+  align-items: center;
   padding: 12px;
   border: 1px solid #ddd;
+}
+
+.Room__status {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: grey;
+  justify-self: end;
+  align-self: center;
+}
+
+.Room__status--clean {
+  background: green;
+}
+
+.Room__status--dirty {
+  background: rgb(185, 71, 56);
 }
